--- a/style.css
+++ b/style.css
@@ -10,4 +10,18 @@ body {
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
+	background-image: linear-gradient(
+		to right top,
+		#051937,
+		#004d7a,
+		#008793,
+		#00bf72,
+		#a8eb12
+	);
+}
+
+h1 {
+	font-size: 3rem;
+	color: white;
+	text-shadow: 5px 5px 20px black;
 }
